Merged different QLearningAgent implementations. Introduced SimpleQNetwork