@@ -1,10 +1,14 @@
 package de.neebs.ai.control.games;
 
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import de.neebs.ai.control.rl.*;
 import org.junit.jupiter.api.Test;
 
+import java.io.File;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 class ConnectFourTest {
     @Test
@@ -13,47 +17,15 @@ class ConnectFourTest {
         connectFour.execute(false, false, null, 100);
     }
 
-    private static class DoNotWinAgent implements Agent<ConnectFour.GameAction, ConnectFour.GameState> {
-        private final ConnectFour.ActionObservationFilter actionObservationFilter;
-
-        DoNotWinAgent(ConnectFour.ActionObservationFilter actionObservationFilter) {
-            this.actionObservationFilter = actionObservationFilter;
-        }
-        @Override
-        public ConnectFour.GameAction chooseAction(ConnectFour.GameState observation, ActionSpace<ConnectFour.GameAction> actionSpace) {
-            try {
-                actionSpace = actionObservationFilter.filter(observation, actionSpace);
-                for (ConnectFour.GameAction action : actionSpace.getActions()) {
-                    ConnectFour.GameState state = observation.copy();
-                    state.nextPlayer();
-                    ConnectFour.Utils.step(state, action);
-                    if (ConnectFour.Utils.checkWin(state) > 0) {
-                        return action;
-                    }
-                }
-                for (ConnectFour.GameAction action : actionSpace.getActions()) {
-                    ConnectFour.GameState state = observation.copy();
-                    ConnectFour.Utils.step(state, action);
-                    if (ConnectFour.Utils.checkWin(state) == 0) {
-                        return action;
-                    }
-                }
-                return actionSpace.getRandomAction();
-            } catch (IllegalMoveException e) {
-                throw new RuntimeException(e);
-            }
-        }
-    }
-
     @Test
     void test2() {
         int episodeCount = 500;
         ConnectFour.Env environment = new ConnectFour.Env(ConnectFour.GameAction.class, ConnectFour.GameState.class);
-        NeuralNetwork1D<ConnectFour.GameState> network = new NeuralNetwork1D<>(new ConnectFour.MyNeuralNetworkFactory(), 1234L);
+        NeuralNetwork1D<ConnectFour.GameState> network = new NeuralNetwork1D<>(new ConnectFour.NeuralNetworkFactory1D(), 1234L);
         EpsilonGreedyPolicy greedy = EpsilonGreedyPolicy.builder().epsilon(1.0).epsilonMin(0.01).decreaseRate(0.010).step(1).build();
         Agent<ConnectFour.GameAction, ConnectFour.GameState> red = new QLearningAgent<>(network, greedy, 1.0);
 //        Agent<Action, GameState> red = new DoubleQLearningAgent<>(network, greedy, 0.99);
-        Agent<ConnectFour.GameAction, ConnectFour.GameState> yellow = new DoNotWinAgent(new ConnectFour.ActionObservationFilter());
+        Agent<ConnectFour.GameAction, ConnectFour.GameState> yellow = new ConnectFour.DoNotWinAgent(new ConnectFour.ActionObservationFilter());
         // Agent<Action, GameState> yellow = new RandomAgent();
         MultiPlayerGame<ConnectFour.GameAction, ConnectFour.GameState, ConnectFour.Env> connectFour = new MultiPlayerGame<>(environment, Arrays.asList(yellow, red));
         for (int i = 1; i <= episodeCount; i++) {
@@ -67,16 +39,31 @@ class ConnectFourTest {
     @Test
     void test3() {
         ConnectFour.Env environment = new ConnectFour.Env(ConnectFour.GameAction.class, ConnectFour.GameState.class);
-        NeuralNetwork1D<ConnectFour.GameState> network = new NeuralNetwork1D<>("connect-four-agent.zip");
+        String filename = "connect-four-agent-ql.json";
+//        NeuralNetwork1D<ConnectFour.GameState> network = new NeuralNetwork1D<>("connect-four-agent.zip");
+        SimpleQNetwork<ConnectFour.GameState, ConnectFour.GameAction> network = loadSimpleQNetwork(filename);
         Agent<ConnectFour.GameAction, ConnectFour.GameState> red = new QLearningAgent<>(network, EpsilonGreedyPolicy.builder().epsilon(0.01).epsilonMin(0.01).decreaseRate(0.010).step(1).build(), 1.0);
         Agent<ConnectFour.GameAction, ConnectFour.GameState> yellow = new DoTheFollowingAgent<>(
                 new ConnectFour.ActionObservationFilter(),
-                List.of(ConnectFour.GameAction.DROP_3, ConnectFour.GameAction.DROP_2, ConnectFour.GameAction.DROP_1, ConnectFour.GameAction.DROP_6));
-        MultiPlayerGame<ConnectFour.GameAction, ConnectFour.GameState, ConnectFour.Env> connectFour = new MultiPlayerGame<>(environment, Arrays.asList(yellow, red));
+                List.of(ConnectFour.GameAction.DROP_3, ConnectFour.GameAction.DROP_3, ConnectFour.GameAction.DROP_4, ConnectFour.GameAction.DROP_6, ConnectFour.GameAction.DROP_5));
+        MultiPlayerGame<ConnectFour.GameAction, ConnectFour.GameState, ConnectFour.Env> connectFour = new MultiPlayerGame<>(environment, Arrays.asList(red, yellow));
         for (int i = 1; i <= 100; i++) {
             MultiPlayerResult<ConnectFour.GameAction, ConnectFour.GameState> multiPlayerResult = connectFour.play();
             System.out.println("Episode: " + i + ", QLearning: " + multiPlayerResult.getRewards().get(red) + ", FixAgent: " + multiPlayerResult.getRewards().get(yellow) + ", Rounds: " + multiPlayerResult.getRounds());
         }
-        network.save("connect-four-agent.zip");
+        network.save(filename);
     }
+
+    private static SimpleQNetwork<ConnectFour.GameState, ConnectFour.GameAction> loadSimpleQNetwork(String filename) {
+        SimpleQNetwork<ConnectFour.GameState, ConnectFour.GameAction> network;
+        File file = new File(filename);
+        try {
+            List<SimpleQNetwork.SaveData<ConnectFour.GameState>> saveData = new ObjectMapper().readValue(file, new TypeReference<>() {});
+            network = new SimpleQNetwork<>(saveData.stream().collect(Collectors.toMap(SimpleQNetwork.SaveData::getObservation, SimpleQNetwork.SaveData::getWeights)), 0.001, ConnectFour.GameAction.class);
+        } catch (Exception e) {
+            throw new IllegalStateException(e);
+        }
+        return network;
+    }
+
 }
